fix spacing

--- a/www/assets/css/app.css
+++ b/www/assets/css/app.css
@@ -1,19 +1,5 @@
 
 
-h1, h2, h3, h4 {
-    font-family: Catamaran,Helvetica,Arial,sans-serif;
-    font-weight: 200;
-    letter-spacing: 1px;
-}
-
-h3 {
-    font-size: 20px;
-}
-
-h1 {
-    font-size: 50px;
-}
-
 header.masthead {
     position: relative;
     width: 100%;
@@ -28,6 +14,12 @@ header.masthead h3 {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+header.masthead h1 {
+    font-size: 50px;
+}
+header.masthead h3 {
+    font-size: 20px;
+}
 header.masthead a {
     margin-top: 50px;
     cursor: pointer;
@@ -37,43 +29,15 @@ header.masthead a img {
     margin-top: -7px;
     margin-bottom: -3px;
 }
-header.masthead .header-content {
-    max-width: 500px;
-    margin-bottom: 100px;
-    text-align: center; }
-header.masthead .header-content h1 {
-    font-size: 30px; }
-header.masthead .device-container {
-    max-width: 325px;
-    margin-right: auto;
-    margin-left: auto; }
-header.masthead .device-container .screen img {
-    border-radius: 3px; }
 @media (min-width: 992px) {
-    header.masthead {
-        height: 100vh;
-        min-height: 775px;
-        padding-top: 50px;
-        padding-bottom: 50px; }
-    header.masthead .header-content {
-        margin-bottom: 0;
-        text-align: left; }
-    header.masthead .header-content h1 {
-        font-size: 50px; }
-    header.masthead .device-container {
-        max-width: 325px; } }
-
-@media only screen and (max-width: 768px) {
-
-    h3 {
-        font-size: 15px;
+    header.masthead h1 {
+        font-size: 60px;
     }
-
-    h1 {
-        font-size: 30px;
+    header.masthead h3 {
+        font-size: 25px;
     }
-
 }
+
 
 .terminal-window {
     text-align: left;
@@ -154,4 +118,7 @@ header.masthead .device-container .screen img {
 
 #serverless img {
     margin-bottom: -50px;
+}
+#serverless a {
+    margin-top: 50px;
 }
